Fix paged leases param documentation
