# gator-leasing-server/docs/swagger.json
@@ -87,6 +87,17 @@
                     "leases"
                 ],
                 "summary": "get paged leases",
+                "parameters": [
+                    {
+                        "description": "get paginated lease request",
+                        "name": "getPaginatedLeasesRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/viewModel.PaginatedLeasesRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -183,6 +194,17 @@
         }
     },
     "definitions": {
+        "enums.SortDirection": {
+            "type": "integer",
+            "enum": [
+                0,
+                1
+            ],
+            "x-enum-varnames": [
+                "Ascending",
+                "Descending"
+            ]
+        },
         "viewModel.Address": {
             "type": "object",
             "required": [
@@ -411,6 +433,23 @@
                 },
                 "utilities": {
                     "type": "number"
+                }
+            }
+        },
+        "viewModel.PaginatedLeasesRequest": {
+            "type": "object",
+            "properties": {
+                "pageSize": {
+                    "type": "integer"
+                },
+                "paginationToken": {
+                    "type": "string"
+                },
+                "sortDirection": {
+                    "$ref": "#/definitions/enums.SortDirection"
+                },
+                "sortToken": {
+                    "type": "string"
                 }
             }
         }
